--- a/about.html
+++ b/about.html
@@ -107,15 +107,11 @@
 <table class="ta1">
 <tr>
 <th>名称</th>
-<td>古着卸Episode</td>
+<td>Episode</td>
 </tr>
 <tr>
 <th>代表</th>
-<td>中川駿</td>
-</tr>
-<tr>
-<th>所在地</th>
-<td>AAAAAAAAA</td>
+<td>佐藤龍太郎</td>
 </tr>
 <tr>
 <th>お問い合わせ</th>
